<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ls_thesis</name>
  <version>0.1.0</version>
  <description>Provides all required hardware interfacing for my thesis project.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="z5207471@student.unsw.edu.au">z5207471@student.unsw.edu.au</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!--   Commonly used license strings: BSD, MIT, Apache-2.0, GPL-3.0-only, ... -->
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Client libraries -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>

  <!-- Message / interface packages -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>omni_msgs</depend>
  <depend>cartesian_control_msgs</depend>
  <depend>motor_angles_msg</depend>

  <!-- Transforms -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Linear algebra -->
  <depend>eigen</depend>

  <!-- Runtime-only packages used by the display launch file -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
